@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2014-XX-XX  Release 7.26.XX                                    ---
 ----------------------------------------------------------------------
 
+* added -m option to lc to report disjoint mat/los values - Cliff Yapp
 * added icv tool for image format conversion - Cliff Yapp
 * ported 'burst' tool (batch mode only) to Windows - Cliff Yapp
 * removed mged pl command, use plot command instead - Sean Morrison
